Added context menus

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,9 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
+    <div id="status">
+      <p>User login should come here</p>
+    </div>
   </body>
 </html>
 
